--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy to App Engine
 
 on:
-  push:
+  pull_request:
     branches: [ main ]
   workflow_dispatch:
 
@@ -26,12 +26,16 @@ jobs:
       name: Install dependencies
       run: |
         pip install -r requirements.txt
+
+    - id: 'static_files'
+      name: Download static files
+      run: |
         python manage.py collectstatic
 
     - id: 'auth'
       uses: 'google-github-actions/auth@v2'
       with:
-        workload_identity_provider: 'projects/207118337963/locations/global/workloadIdentityPools/github-pool/providers/github-actions'
+        workload_identity_provider: 'projects/396143431959/locations/global/workloadIdentityPools/github/providers/actions'
         service_account: 'github-actions@fairpay-438003.iam.gserviceaccount.com'
 
     - id: 'deploy'
