--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
       with:
         token_format: 'access_token'
         workload_identity_provider: 'projects/396143431959/locations/global/workloadIdentityPools/actions/providers/github'
-        service_account: 'github-actions@fairpay-438003.iam.gserviceaccount.com'
+        service_account: 'fair-pay-438020@appspot.gserviceaccount.com'
 
     - id: 'deploy'
       uses: 'google-github-actions/deploy-appengine@v2'
