--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,9 +38,8 @@ jobs:
     - id: 'auth'
       uses: 'google-github-actions/auth@v2'
       with:
-        token_format: 'access_token'
+        project_id: 'fair-pay-438020'
         workload_identity_provider: 'projects/396143431959/locations/global/workloadIdentityPools/actions/providers/github'
-        service_account: 'fair-pay-438020@appspot.gserviceaccount.com'
 
     # - id: 'deploy'
     #   uses: 'google-github-actions/deploy-appengine@v2'
