--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,7 @@ jobs:
       with:
         project_id: 'fair-pay-438020'
         workload_identity_provider: 'projects/396143431959/locations/global/workloadIdentityPools/actions/providers/github'
+        service_account: 'fair-pay-438020@appspot.gserviceaccount.com'
         token_format: 'access_token'
 
     # - id: 'deploy'
