--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -5,5 +5,6 @@ Django==5.1.1
 django-cors-headers==4.4.0
 django-filter==24.3
 graphene-django==3.2.2
+psycopg2==2.9.9
 PyJWT==2.9.0
 python-decouple==3.8
